--- a/mvc/CI-Platform/CI-Platform-web/wwwroot/css/HomePage.css
+++ b/mvc/CI-Platform/CI-Platform-web/wwwroot/css/HomePage.css
@@ -70,6 +70,15 @@ a,li,button,h3 {
     left: auto !important;
     top: 4rem;
 }
+.scrollable-menu {
+    height: auto;
+    max-height: 25vh;
+    overflow-y: scroll;
+    margin-left:1rem;
+}
+.dropdown-item{
+    width:auto;
+}
 
 .main-navigation.active .sidebar {
     left: 0;
@@ -305,30 +314,81 @@ a,li,button,h3 {
         display: none !important;
     }
 }
+.img-filter {
+    display: none;
+}
 
+@media (max-width:767.98px) {
 
-/*for pagination but not working*/
-/*.active > .page-link, .page-link.active {
+    .img-filter {
+        display: block;
+    }
+
+    .filter-options {
+        display: none;
+    }
+}
+
+    /*for pagination but not working*/
+    /*.active > .page-link, .page-link.active {
     z-index: 3;
     color: var(--bs-pagination-active-color);
     background-color: #F88634;
     border-color: var(--bs-pagination-active-border-color);
 }*/
 
-/*for swiper*/
-.swiper {
-    width: 100%;
-    height: 100%;
-}
+    /*for swiper*/
+    .swiper {
+        width: 100%;
+        height: 100%;
+    }
 
-.swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+    .swiper-slide {
+        text-align: center;
+        font-size: 18px;
+        background: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+        .swiper-slide img {
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+    .swiper {
+        width: 100%;
+        height: 300px;
+    }
+
+    .swiper-slide {
+        background-size: cover;
+        background-position: center;
+    }
+
+    .mySwiper2 {
+        height: 80%;
+        width: 100%;
+    }
+
+    .mySwiper {
+        height: 20%;
+        box-sizing: border-box;
+        padding: 10px 0;
+    }
+
+        .mySwiper .swiper-slide {
+            width: 25%;
+            height: 100%;
+            opacity: 0.4;
+        }
+
+        .mySwiper .swiper-slide-thumb-active {
+            opacity: 1;
+        }
 
     .swiper-slide img {
         display: block;
@@ -337,239 +397,211 @@ a,li,button,h3 {
         object-fit: cover;
     }
 
-.swiper {
-    width: 100%;
-    height: 300px;
-}
+    /*swiper ends*/
 
-.swiper-slide {
-    background-size: cover;
-    background-position: center;
-}
-
-.mySwiper2 {
-    height: 80%;
-    width: 100%;
-}
-
-.mySwiper {
-    height: 20%;
-    box-sizing: border-box;
-    padding: 10px 0;
-}
-
-    .mySwiper .swiper-slide {
-        width: 25%;
-        height: 100%;
-        opacity: 0.4;
+    .mission-detail-border {
+        border: #E8E8E8 solid 1px;
     }
 
-    .mySwiper .swiper-slide-thumb-active {
+    .capsule-transparent {
+        position: absolute;
+        padding: 0.5rem 1.5rem;
+        width: max-content;
+        transform: translate(-50%,-50%);
+        left: 50%;
+        background: #FFFFFF 0% 0% no-repeat;
         opacity: 1;
     }
 
-.swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+    .capsule-border {
+        border: #E8E8E8 solid 2px;
+        border-radius: 21px;
+    }
 
-/*swiper ends*/
-
-.mission-detail-border {
-    border: #E8E8E8 solid 1px;
-}
-
-.capsule-transparent {
-    position: absolute;
-    padding: 0.5rem 1.5rem;
-    width: max-content;
-    transform: translate(-50%,-50%);
-    left: 50%;
-    background: #FFFFFF 0% 0% no-repeat;
-    opacity: 1;
-}
-
-.capsule-border {
-    border: #E8E8E8 solid 2px;
-    border-radius: 21px;
-}
-
-.mission-detail-capsule {
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    border: 2px solid #757575;
-    border-radius: 25px;
-    opacity: 1;
-    color: #757575;
-    opacity: 1;
-    padding: 0.5rem 2rem;
-    margin: 2rem 1rem;
-}
-
-.mission-detail-box {
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    border: 1px solid #E8E8E8;
-    border-radius: 3px;
-    opacity: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 8rem;
-    padding-left: 0.5rem;
-}
-
-    .mission-detail-box p {
-        font-size: 13px;
+    .mission-detail-capsule {
+        background: #FFFFFF 0% 0% no-repeat padding-box;
+        border: 2px solid #757575;
+        border-radius: 25px;
+        opacity: 1;
         color: #757575;
+        opacity: 1;
+        padding: 0.5rem 2rem;
+        margin: 2rem 1rem;
     }
 
-    .mission-detail-box span {
-        font-size: 15px;
-        color: #414141;
+    .mission-detail-box {
+        background: #FFFFFF 0% 0% no-repeat padding-box;
+        border: 1px solid #E8E8E8;
+        border-radius: 3px;
+        opacity: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 8rem;
+        padding-left: 0.5rem;
     }
 
-.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
-    color: var(--bs-nav-tabs-link-active-color);
-    background-color: var(--bs-nav-tabs-link-active-bg);
-    border-bottom: 3px solid black;
-}
+        .mission-detail-box p {
+            font-size: 13px;
+            color: #757575;
+        }
 
-.comments-img {
-    height: 4rem;
-    width: auto;
-}
+        .mission-detail-box span {
+            font-size: 15px;
+            color: #414141;
+        }
 
-.comments-details {
-    display: flex;
-    flex-direction: column;
-    margin-left: 3rem;
-}
-
-.table-info {
-    border: 1px solid #dee2e6;
-    padding: 1.5rem;
-    margin: 2rem 0rem;
-}
-
-.table-last-row td {
-    border-bottom: none;
-}
-
-.table-last-row span {
-    color: #757575;
-    font-size: 14px;
-}
-.volunteers-images-div {
-    border: 1px solid #dee2e6;
-    padding: 0.5rem 1rem 1rem 1rem;
-}
-    .volunteers-images-div h5 {
-        margin:1rem 0rem;
+    .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+        color: var(--bs-nav-tabs-link-active-color);
+        background-color: var(--bs-nav-tabs-link-active-bg);
+        border-bottom: 3px solid black;
     }
-.volunteerd-images {
-    display: grid;
-    border-top: 1px solid #dee2e6;
-    grid-template-columns: repeat(3, 1fr);
-    /*  grid-auto-rows: 200px;*/
-}
-.volunteerd-img {
-    text-align-last: center;
-}
-.volunteerd-images img {
-    height: 4rem;
-    width: auto;
-    border-radius: 50%;
-    padding: 0.5rem 1rem;
-}
+
+    .comments-img {
+        height: 4rem;
+        width: auto;
+    }
+
+    .comments-details {
+        display: flex;
+        flex-direction: column;
+        margin-left: 3rem;
+    }
+
+    .table-info {
+        border: 1px solid #dee2e6;
+        padding: 1.5rem;
+        margin: 2rem 0rem;
+    }
+
+    .table-last-row td {
+        border-bottom: none;
+    }
+
+    .table-last-row span {
+        color: #757575;
+        font-size: 14px;
+    }
+
+    .volunteers-images-div {
+        border: 1px solid #dee2e6;
+        padding: 0.5rem 1rem 1rem 1rem;
+    }
+
+        .volunteers-images-div h5 {
+            margin: 1rem 0rem;
+        }
+
+    .volunteerd-images {
+        display: grid;
+        border-top: 1px solid #dee2e6;
+        grid-template-columns: repeat(3, 1fr);
+        /*  grid-auto-rows: 200px;*/
+    }
+
+    .volunteerd-img {
+        text-align-last: center;
+    }
+
+    .volunteerd-images img {
+        height: 4rem;
+        width: auto;
+        border-radius: 50%;
+        padding: 0.5rem 1rem;
+    }
 
     .volunteerd-images figcaption {
         color: #414141;
         font-size: 13px;
-        text-align:center;
+        text-align: center;
     }
-.story-bg-img img {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-    object-position: 50% 35%;
-    filter: brightness(0.4);
-}
-.story-bg-img-text {
-    position:absolute;
-    top:50%;
-    left:50%; 
-    transform:translate(-50%,-50%);
-    text-align:center;
-}
-.btn-share-story {
-    border-color: #fff;
-    color: #fff;
-    font-weight: 500;
-    background: #F8863400 0% 0% no-repeat padding-box;
-    border: 2px solid #fff;
 
-    opacity: 1;
-}
-.story-cards-pill {
-    width: fit-content;
-    position: absolute;
-    padding: 0.5rem;
-    background: #FFFFFF;
-    color: #414141;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.story-card-icon {
-    height: 3rem;
-    width: auto;
-}
-.story-card-icon-detail {
-    margin-left: 1rem;
-    margin-top: 0.25rem;
-    color: #757575;
-    font-size:14px;
-}
+    .story-bg-img img {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+        object-position: 50% 35%;
+        filter: brightness(0.4);
+    }
 
-/*.story-bg-img img{
+    .story-bg-img-text {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        text-align: center;
+    }
+
+    .btn-share-story {
+        border-color: #fff;
+        color: #fff;
+        font-weight: 500;
+        background: #F8863400 0% 0% no-repeat padding-box;
+        border: 2px solid #fff;
+        opacity: 1;
+    }
+
+    .story-cards-pill {
+        width: fit-content;
+        position: absolute;
+        padding: 0.5rem;
+        background: #FFFFFF;
+        color: #414141;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    .story-card-icon {
+        height: 3rem;
+        width: auto;
+    }
+
+    .story-card-icon-detail {
+        margin-left: 1rem;
+        margin-top: 0.25rem;
+        color: #757575;
+        font-size: 14px;
+    }
+
+    /*.story-bg-img img{
     background-size:cover;
 }*/
-@media(max-width: 1200px) {
-    #list-view {
-        display: none !important;
+    @media(max-width: 1200px) {
+        #list-view {
+            display: none !important;
+        }
+
+        #grid-view {
+            display: flex !important;
+        }
     }
 
-    #grid-view {
-        display: flex !important;
-    }
-}
+    @media (min-width: 992px) {
+        .sidebar {
+            position: relative;
+            top: auto;
+            bottom: auto;
+            left: auto;
+            flex-direction: column;
+            max-width: 100%;
+            transform: none;
+            transition: none;
+            z-index: auto;
+        }
 
-@media (min-width: 992px) {
-    .sidebar {
+        .navbar-expand-lg .navbar-nav {
+            flex-direction: row;
+            margin-right: 20rem;
+        }
+    }
+
+    .main-heading {
         position: relative;
-        top: auto;
-        bottom: auto;
-        left: auto;
-        flex-direction: column;
-        max-width: 100%;
-        transform: none;
-        transition: none;
-        z-index: auto;
+        z-index: 100;
     }
 
-    .navbar-expand-lg .navbar-nav {
-        flex-direction: row;
-        margin-right: 20rem;
+    @media (max-width: 991.98px) {
+        .navbar-nav {
+            padding-left: 1.5rem;
+        }
     }
-}
-
-.main-heading {
-    position: relative;
-    z-index: 100;
-}
-
-@media (max-width: 991.98px) {
-    .navbar-nav {
-        padding-left: 1.5rem;
-    }
-}
