--- a/mvc/CI-Platform/CI-Platform-web/wwwroot/css/HomePage.css
+++ b/mvc/CI-Platform/CI-Platform-web/wwwroot/css/HomePage.css
@@ -139,6 +139,12 @@ a,li,button,h3 {
             box-shadow: 0 0 3px 0 black;
             outline: none;
         }
+.pill{
+    border: black 1px solid;
+    border-radius: 30%;
+    margin: 3px 5px;
+    padding: 2px;
+}
 
 .filter-list-view li:nth-child(n) {
     border-right: 1px solid #bbb;
