--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/_SearchNav.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/_SearchNav.cshtml
@@ -85,7 +85,7 @@
                     Skill
                     &nbsp; &nbsp; <img class="ps-5 pe-2" src="~/images/drop-down.png">
                 </a>
-                <ul class="dropdown-menu dropdown-menu-light scrollable-menu CardsFilter" aria-labelledby="navbarDarkDropdownMenuLink">
+                <ul class="dropdown-menu dropdown-menu-light scrollable-menu CardsFilter" aria-labelledby="navbarDarkDropdownMenuLink" id="SkillList">
                     @foreach (var obj in Model.Skill)
                     {
                         <li>
