--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/_ListView.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/_ListView.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class=" card-div card my-3 ">
-    <div class="row g-0">
-        <div class="col-md-4">
+    <div class="row g-0 list-card ">
+        <div class="col-md-4 ">
             <div class="pill-on-img">
                 <img src="~/images/Grow-Trees-On-the-path-to-environment-sustainability-1.png"
                      class="card-img-top" alt="...">
