--- a/mvc/CI-Platform/CI-Platform-web/Views/Home/HomePage.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Home/HomePage.cshtml
@@ -29,7 +29,7 @@
                 <li><a class="dropdown-item" >Newest</a></li>
                 <li><a class="dropdown-item" >Oldest</a></li>
                 <li><a class="dropdown-item">Lowest available seats</a></li>
-                <li><a class="dropdown-item">Highest Available seats</a></li>
+                <li><a class="dropdown-item">Highest available seats</a></li>
                 <li><a class="dropdown-item">My favourites</a></li>
                 <li><a class="dropdown-item">Registration deadline</a></li>
             </ul>
