--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/_ListView.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/_ListView.cshtml
@@ -1,92 +1,125 @@
-﻿<div class=" card-div card my-3 ">
-    <div class="row g-0 list-card ">
-        <div class="col-md-4 ">
-            <div class="pill-on-img">
-                <img src="~/images/Grow-Trees-On-the-path-to-environment-sustainability-1.png"
+﻿@model CI_Platform.Entities.ViewModels.MissionListModel
+
+
+@foreach (var obj in Model.MissionList)
+{
+    double avg_rating = obj.MissionRatings.Average(r => r.Rating);
+
+
+    var registered_users = obj.MissionApplications.Count(m => m.ApprovalStatus.Contains("APPROVE"));
+    var total_seats = obj.TotalSeats - registered_users;
+
+    <div class=" card-div card my-3 ">
+        <div class="row g-0 list-card ">
+            <span class="created-date d-none">@obj.CreatedAt </span>
+            <div class="col-md-4 ">
+                <div class="pill-on-img">
+                    <img src="~/images/Grow-Trees-On-the-path-to-environment-sustainability-1.png"
                      class="card-img-top" alt="...">
-                <div class="applied-pill">
-                    APPLIED
+                    <div class="applied-pill">
+                        APPLIED
+                    </div>
+                    <div class="location">
+                        <img src="~/images/pin1.png">
+                        @obj.City.CityName
+                    </div>
+                    <div class="like-on-img">
+                        <img style="opacity: 1;" src="~/images/heart.png">
+                    </div>
+                    <div class="add-on-img">
+                        <img style="opacity: 1;" src="~/images/add1.png">
+                    </div>
+                    <div class="theme-pill rounded-pill"> Environment </div>
                 </div>
-                <div class="location">
-                    <img src="~/images/pin1.png">
-                    Toronto
-                </div>
-                <div class="like-on-img">
-                    <img style="opacity: 1;" src="~/images/heart.png">
-                </div>
-                <div class="add-on-img">
-                    <img style="opacity: 1;" src="~/images/add1.png">
-                </div>
-                <div class="theme-pill rounded-pill"> Environment </div>
             </div>
-        </div>
-        <div class="col-md-8">
-            <div class="card-body">
-                <div class="card-text d-flex justify-content-between">
-                    <div>
-                        <img class="p-2" src="~/images/pin1.png" />
-                        <span class="pe-2">Atlanta</span>
-                        <img class="p-2" src="~/images/web.png" />
-                        <span class="pe-2">Environment</span>
-                        <img class="p-2" src="~/images/organization.png" />
-                        <span class="pe-2">Smith International Caring Foundation</span>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <div class="card-text d-flex justify-content-between">
+                        <div>
+                            <img class="p-2" src="~/images/pin1.png" />
+                            <span class="pe-2"> @obj.City.CityName</span>
+                            <img class="p-2" src="~/images/web.png" />
+                            <span class="pe-2">@obj.MissionTheme.Title</span>
+                            <img class="p-2" src="~/images/organization.png" />
+                            <span class="pe-2">@obj.OrganizationName</span>
+                        </div>
+                        <div>
+                            @for (int i = 1; i <= avg_rating; i++)
+                            {
+                                <img src="~/images/selected-star.png" />
+                            }
+                            @for (int i = 5; i > avg_rating; i--)
+                            {
+                                <img src="~/images/star.png" />
+                            }
+                        </div>
                     </div>
-                    <div>
-                        <img class="py-1" src="~/images/selected-star.png" />
-                        <img class="py-1" src="~/images/selected-star.png" />
-                        <img class="py-1" src="~/images/selected-star.png" />
-                        <img class="py-1" src="~/images/selected-star.png" />
-                        <img class="py-1" src="~/images/selected-star.png" />
-                    </div>
-                </div>
-                <h3 class="card-title">Grow Trees On the path to environment sustainability</h3>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore...</p>
-                <div class="card-text d-flex justify-content-between pt-5">
-                    <div>
-                        <div class="row gutter justify-content-around">
-                            <div class="col card-detail-listview">
-                                <img class="icon-detail icon" src="~/images/Seats-left.png" alt="seats left">
-                                <div class="card-detail-text">
-                                    <p>297</p>
-                                    <p>Seats left</p>
-                                </div>
-                            </div>
-                            <div class="col card-detail-listview">
-                                <img class="icon-detail icon" src="~/images/achieved.png" alt="deadline">
-                                <div class="card-detail-text">
-                                    <div class="progress" role="progressbar" aria-label="Warning example" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style=" background-color: #F88634;"></div>
+                    <h3 class="card-title">@obj.Title</h3>
+                    <p class="card-text">@obj.ShortDescription</p>
+                    <div class="card-text d-flex justify-content-between pt-5">
+                        <div>
+                            <div class="row gutter justify-content-around">
+                                <div class="col card-detail-listview">
+                                    <img class="icon-detail icon" src="~/images/Seats-left.png" alt="seats left">
+                                    <div class="card-detail-text">
+                                        <p class="seat-left">  @total_seats</p>
+                                        <p>Seats left</p>
                                     </div>
-                                    <p></p>
-                                    <p>achieved</p>
                                 </div>
-                            </div>
-                            <div class="col card-detail-listview">
-                                <img class="icon-detail icon" src="~/images/calender.png" alt="seats left">
-                                <div class="card-detail-text">
-                                    <p>From 09/10/2019</p>
-                                    <p>Until 10/11/2019</p>
-                                </div>
-                            </div>
-                            <div class="col card-detail-listview">
-                                <i class="bi bi-tools icon-detail icon text-secondary tools-icon"></i>
-                                <div class="card-detail-text">
-                                    <p>Skills</p>
-                                    <p>Botany</p>
+
+                                @if (obj.MissionType.Equals("Time"))
+                                {
+                                    <div class="col card-detail-listview">
+                                        <img class="icon-detail icon" src="~/images/calender.png" alt="calender">
+                                        <div class="card-detail-text">
+                                            <p>From  @obj.StartDate.Value.ToShortDateString()</p>
+                                            <p>Until @obj.EndDate.Value.ToShortDateString()</p>
+                                        </div>
+                                    </div>
+
+                                }
+
+                                else
+                                {
+                                    @foreach (var goal_mission in obj.GoalMissions)
+                                    {
+                                        <div class="col card-detail-listview">
+                                            <img class="icon-detail icon" src="~/images/achieved.png" alt="deadline">
+                                            <div class="card-detail-text">
+                                                <div class="progress" role="progressbar" aria-label="Warning example" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                                                    <div class="progress-bar" style=" background-color: #F88634;"></div>
+                                                </div>
+                                                <p>@goal_mission.GoalValue</p>
+                                                <p>achieved</p>
+                                            </div>
+                                        </div>
+
+                                    }
+                                }
+
+                                <div class="col card-detail-listview">
+                                    <i class="bi bi-tools icon-detail icon text-secondary tools-icon"></i>
+                                    <div class="card-detail-text">
+                                        <p>Skills</p>
+                                        @foreach (var skill in obj.MissionSkills)
+                                        {
+                                            <p class=" skillName">@skill.Skill.SkillName</p>
+                                        }
+                                    </div>
                                 </div>
                             </div>
                         </div>
+                        <div>
+                            <button type="submit" class="btn card-btn">
+                                View Details
+                                <img src="~/images/right-arrow.png">
+                                <img src="~/images/right-arrow2.png" />
+                            </button>
+                        </div>
                     </div>
-                    <div>
-                        <button type="submit" class="btn card-btn">
-                            View Details
-                            <img src="~/images/right-arrow.png">
-                            <img src="~/images/right-arrow2.png" />
-                        </button>
-                    </div>
+
                 </div>
-                </>
             </div>
         </div>
     </div>
-</div>
+}
